rv10: set flags, Fixes Ticket90 Signed-off-by: Michael Niedermayer <michaelni@gmx.at>